--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                     Powered by StyleGAN2
                 </div>
                 <div class="flex space-x-4">
-                    <a href="#" class="text-gray-400 hover:text-gray-500">
+                    <a href="https://github.com/trongkhanh083/stylegan2-face-generator" class="text-gray-400 hover:text-gray-500">
                         <i class="fab fa-github text-lg"></i>
                     </a>
                 </div>
