--- a/templates/grid.html
+++ b/templates/grid.html
@@ -68,9 +68,8 @@
                                 <select id="rowsSelect" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4" selected>4</option>
-                                    <option value="5">5</option>
+                                    <option value="3" selected>3</option>
+                                    <option value="4">4</option>
                                 </select>
                             </div>
                             <div>
@@ -80,7 +79,6 @@
                                     <option value="2">2</option>
                                     <option value="3">3</option>
                                     <option value="4" selected>4</option>
-                                    <option value="5">5</option>
                                 </select>
                             </div>
                         </div>
@@ -135,7 +133,7 @@
                 <div class="mt-6 pt-6 border-t border-gray-200">
                     <div class="space-y-2">
                         <div class="flex justify-between items-center text-sm">
-                            <span class="text-gray-600">Total Faces</span>
+                            <span class="text-gray-600">Mixed Faces</span>
                             <span id="totalFaces" class="font-semibold">16</span>
                         </div>
                         <div class="flex justify-between items-center text-sm">
